@@ -6,6 +6,8 @@ please refer to the ChangeLog file.
 New for version 2.9+:
  - Add third locking method if file-based lock does not work.
    https://salsa.debian.org/minicom-team/minicom/-/issues/9
+ - Make colors enabled the default.
+
 New for version 2.9:
  - Change Hardware Flow Control Default to No.
  - Timestamping mode is now saved and restored.
